--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Created by https://www.toptal.com/developers/gitignore/api/node,vscode,macos,windows,linux,vim,emacs
 # Edit at https://www.toptal.com/developers/gitignore?templates=node,vscode,macos,windows,linux,vim,emacs
 
+# Custom
+@types
+
 ### Emacs ###
 # -*- mode: gitignore; -*-
 *~
