--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
   "name": "log2splunk",
   "version": "0.0.1",
   "description": "Log to Splunk",
-  "main": "index.js",
+  "main": "./dist/index.js",
+  "types": "./@types/index.d.ts",
+  "files": [
+    "dist",
+    "@types"
+  ],
   "scripts": {
     "prepublish": "npm run build",
     "prebuild": "npm run clean",
